Tue Dec  8 10:40:21 2015  Eric Wong  <e@80x24.org>

	* benchmark/bm_vm2_case_lit.rb: new benchmark
	* compile.c (case_when_optimizable_literal): add nil/true/false
	* insns.def (opt_case_dispatch): ditto
	* vm.c (vm_redefinition_check_flag): ditto
	* vm.c (vm_init_redefined_flag): ditto
	* vm_core.h: ditto
	* object.c (InitVM_Object): define === explicitly for nil/true/false
	* test/ruby/test_case.rb (test_deoptimize_nil): new test
	* test/ruby/test_optimization.rb (test_opt_case_dispatch): update
	  (test_eqq): new test
	  [ruby-core:71923] [Feature #11769]
	  Original patch by Aaron Patterson <tenderlove@ruby-lang.org>

Tue Dec  8 10:19:02 2015  Jake Worth  <jakeworth82@gmail.com>

	* lib/optparse.rb: fix double word typo in the document.
	  [Misc #10608] [Fix GH-1126]

Tue Dec  8 09:03:19 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_core.c (d_lite_lshift): should check the argument
	  before negation.

Tue Dec  8 08:56:16 2015  Eric Wong  <e@80x24.org>

	* insns.def (opt_case_dispatch): check Float#=== redefinition
	* test/ruby/test_optimization.rb (test_opt_case_dispatch): new
	  [ruby-core:71920] [Bug #11784]

Tue Dec  8 03:56:05 2015  Koichi Sasada  <ko1@atdot.net>

	* test/lib/iseq_loader_checker.rb: add iseq dumper/loader checker.
	  If you enable this checker (remove `#' in test/runner.rb),
	  you can see comparison results between an original iseq disassembed
	  result and dumped and loaded iseq disassembed result.

	  There are several bugs around there, because of inexact stack depth
	  calculation. Now, I leave these bugs because they are not critical
	  and difficult to solve completely.

	* test/runner.rb: require test/lib/iseq_loader_checker.rb but
	  disabled at default (commented out).

Tue Dec  8 03:45:47 2015  Eric Wong  <e@80x24.org>

	* doc/extension.rdoc: warn about kwargs performance in C
	  [Feature #11339] [ci skip]

Tue Dec  8 03:44:51 2015  Koichi Sasada  <ko1@atdot.net>
